--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<ui:composition template="/templates/template.xhtml" 
-    xmlns="http://www.w3.org/1999/xhtml"
+<ui:composition template="/templates/template.xhtml"
+	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html">
 	<ui:define name="title">Login Page</ui:define>
-	<ui:define name="content">bla</ui:define>
-
+	<ui:define name="content">
+		<div class="container">
+    		<h:form> 
+    			<div class="form-signin">
+        			<h2 class="form-signin-heading">Please sign in</h2>
+        				<h:outputLabel for="inputEmail" styleClass="sr-only">Email address</h:outputLabel>
+						<h:inputText value="#{loginBean.email}" id="userEmail" required="true" styleClass="form-control" />        
+						<h:outputLabel for="inputPassword" styleClass="sr-only">Password</h:outputLabel>
+     					<h:inputText  type="password" id="inputPassword" styleClass="form-control" placeholder="Password" ></h:inputText> 
+        				<h:commandButton styleClass="btn btn-lg btn-primary btn-block" action="#{loginBean.checkLogin}" value="Login"  />
+        		</div>
+      		</h:form>
+    	</div> <!-- /container -->
+	</ui:define>
 </ui:composition>
