Ein-/ausloggen funktioniert

--- a/WebContent/secured/welcome.xhtml
+++ b/WebContent/secured/welcome.xhtml
@@ -5,7 +5,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html">
-	<ui:define name="title">Welcome</ui:define>
+	<ui:define name="title">#{msg.welcome}</ui:define>
 	<ui:define name="content">
 		<div class="container">
     		<h1><h:outputText value="#{msg.welcome} #{loginBean.user.userName}" /></h1>
