--- a/WebContent/register.xhtml
+++ b/WebContent/register.xhtml
@@ -66,10 +66,10 @@
 					<div class="col-sm-offset-2 col-sm-8">
 						<fieldset>
 							<legend>#{msg['newuser.lang']}</legend>
-							<input type="radio" id="gr" name="lang" value="de" /> <label
-								for="gr"> #{msg['newuser.german']}</label> <input type="radio"
-								id="fr" name="lang" value="fr" /> <label for="fr">
-								#{msg['newuser.french']}</label>
+							<input type="radio" id="gr" name="lang" value="de" styleClass="marginRight" /> 
+							<label for="gr"> #{msg['newuser.german']}</label> 
+							<input type="radio"	id="fr" name="lang" value="fr" styleClass="marginRight" /> 
+							<label for="fr">#{msg['newuser.french']}</label>
 						</fieldset>
 					</div>
 					<div class="col-sm-offset-2 col-sm-8">
